<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/obinna_akuma"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/etHandlesLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <TextView
            android:id="@+id/tvSlackName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="5dp"
            android:text="@string/obinna_a"
            android:textSize="16sp"
            android:textStyle="italic" />


        <TextView
            android:id="@+id/tvGitHubHandle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="5dp"
            android:text="@string/github_username"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/personal_bio"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHandlesLinear" />


    <TextView
        android:id="@+id/tvPersonalNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/personal_bio_note"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBio"
        tools:ignore="VisualLintLongText" />


    <TextView
        android:id="@+id/tvSkills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/skills"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPersonalNotes" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSkills">

        <TextView
            android:id="@+id/tvSkill1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/android"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/tvSkills" />


        <TextView
            android:id="@+id/tvSkill2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/navigation"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSkill3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/version_control"
            android:textSize="18sp" />

    </LinearLayout>


    <TextView
        android:id="@+id/tvEducation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/education_certificate"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvEducation">


        <TextView
            android:id="@+id/tvSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/covenant_university"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/tvCertification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gads_2023"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>


    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/edit_button" />



</androidx.constraintlayout.widget.ConstraintLayout>