<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".EditCvActivity">


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


    <EditText
        android:id="@+id/etSlackName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/slack_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGithub" />


    <EditText
        android:id="@+id/etGithub"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/github_handle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />


    <EditText
        android:id="@+id/etPersonalNotes"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/personal_note"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSlackName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etSkill1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:hint="@string/skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPersonalNotes" />

    <EditText
        android:id="@id/etSkill2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSkill1" />

    <EditText
        android:id="@+id/etSkill3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/skills"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSkill2" />


    <EditText
        android:id="@+id/etSchoolCert1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="@string/school_certificate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSkill3" />

    <EditText
        android:id="@+id/etSchoolCert2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/school_certificate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSchoolCert1" />

    <Button
        android:id="@+id/btViewCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_cv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSchoolCert2" />


</androidx.constraintlayout.widget.ConstraintLayout>